--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,38 @@
 
+server.port=9999
+
+# db source url
+spring.datasource.url=jdbc:mysql://localhost:9876/test
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# db response name
+spring.datasource.username=root
+# db response password
+spring.datasource.password= 1234
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+
+
+# redis
+spring.redis.lettuce.pool.max-active=10
+spring.redis.lettuce.pool.max-idle=10
+spring.redis.lettuce.pool.min-idle=2
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+
+# swagger
+# springdoc.api-docs.path=/api-docs/json
+springdoc.show-actuator=true
+springdoc.version=v1.0.0
+springdoc.packages-to-scan=com.mysite.kss
+springdoc.swagger-ui.path=/api-docs
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.operations-sorter=alpha
+springdoc.api-docs.path=/api-docs/json
+springdoc.api-docs.groups.enabled=true
+springdoc.cache.disabled=true
+springdoc.default-consumes-media-type=application/json;charset=UTF-8
+springdoc.default-produces-media-type=application/json;charset=UTF-8
